<resources>
    <string name="app_name">Notes</string>
    <string name="notes">NOTES</string>
    <string name="quote">Take Your Notes With You</string>
    <string name="username">UserName</string>
    <string name="emailid">EmailId</string>
    <string name="general">General</string>
    <string name="add_new">Add New</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_notes_details">NotesDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plus">+</string>
    <string name="title">TITLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">text</string>
    <string name="authentication">Authentication</string>
    <string name="login">Login</string>

</resources>